[gd_scene load_steps=12 format=3 uid="uid://dhl0v14olhdbc"]

[ext_resource type="Script" uid="uid://k60wjmsjqvul" path="res://3d_character_creator.gd" id="1_wih4m"]
[ext_resource type="Script" uid="uid://dl7npn5ppwyto" path="res://character_component.gd" id="2_aki0f"]

[sub_resource type="Resource" id="Resource_sfhlp"]
script = ExtResource("2_aki0f")
name = "CC_female"
glb_path = "res://character_config/CCC_genders_CC_id_66650050/CC_female_CC_id_57be63e5/CC_female.glb"
cc_id = "57be63e5"

[sub_resource type="Resource" id="Resource_k3sre"]
script = ExtResource("2_aki0f")
name = "CC_t_shirt"
glb_path = "res://character_config/CCC_genders_CC_id_66650050/CC_male_CC_id_9efe906c/CCC_shirts_CC_id_6327b5f1/CC_t_shirt_CC_id_dcefb103/CC_t_shirt.glb"
cc_id = "dcefb103"

[sub_resource type="Resource" id="Resource_bgmwl"]
script = ExtResource("2_aki0f")
name = "CCC_shirts"
cc_id = "6327b5f1"
children = Array[ExtResource("2_aki0f")]([SubResource("Resource_k3sre")])

[sub_resource type="Resource" id="Resource_tewd7"]
script = ExtResource("2_aki0f")
name = "CC_male"
glb_path = "res://character_config/CCC_genders_CC_id_66650050/CC_male_CC_id_9efe906c/CC_male.glb"
cc_id = "9efe906c"
children = Array[ExtResource("2_aki0f")]([SubResource("Resource_bgmwl")])

[sub_resource type="Resource" id="Resource_be0c8"]
script = ExtResource("2_aki0f")
name = "CCC_genders"
cc_id = "66650050"
children = Array[ExtResource("2_aki0f")]([SubResource("Resource_sfhlp"), SubResource("Resource_tewd7")])

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_aki0f"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_be0c8"]
sky_material = SubResource("ProceduralSkyMaterial_aki0f")

[sub_resource type="Environment" id="Environment_gcf7q"]
background_mode = 2
sky = SubResource("Sky_be0c8")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_aki0f"]

[node name="3DCharacterCreator" type="Node3D"]
script = ExtResource("1_wih4m")
blender_export_path = "res://character_config"
global_config = SubResource("Resource_be0c8")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gcf7q")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.0827354, 1.0072794, 1.949155)

[node name="CharacterPreviewSpot" type="Node3D" parent="."]

[node name="CharacterPlacePreview" type="MeshInstance3D" parent="CharacterPreviewSpot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_aki0f")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchor_right = 1.0001321
anchor_bottom = 1.0003704
offset_right = -0.15209961
offset_bottom = -0.23999023
metadata/_edit_use_anchors_ = true

[node name="CCC_" type="VBoxContainer" parent="UI"]
visible = false
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 561.0
offset_bottom = 42.0

[node name="TitleLabel" type="Label" parent="UI/CCC_"]
layout_mode = 2
text = "container title"

[node name="ModelList" type="ItemList" parent="UI/CCC_"]
layout_mode = 2
auto_width = true
auto_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Panel" type="Panel" parent="UI/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="UI/HBoxContainer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HBoxContainer/MarginContainer/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
